# AI_Photo_Generation_Telegram_Bot

./: .gitignore  README.md  pyproject.toml  replicatebot.sqlite3  replicatebot.sqlite3-shm  replicatebot.sqlite3-wal  requirements.txt
src/: .env-example  __main__.py  config_reader.py
src/bot/handlers/: callback.py  credits_images.py  generate_image.py  keyboards.py  payment.py  router.py
src/db/models/: __init__.py  user.py
